style.css
/* ... */
.burgar__card:hover{
    /* transform: translateZ(50px); */
    transform: scale(1.094);
    box-shadow: 0 4px 6px 0 rgba(255,255,255,0.12),
    0 6px 12px 0 rgba(255,225,225,0.19)
    ;
}

.card__img_wrap{
    width: 90%;
    height: 90%;
    display: flex;
    justify-content: center;
    align-items: center;
    border-top-left-radius: 40%;
    border-top-right-radius: 40%;
    z-index: 1;
    position: relative;
    /* background: linear-gradient( to top, rgba(0,0,0,0.5)50%,
    rgba(0,0,0,0.5)50%
    ),url(/img/burgar_&_chips.jpg) no-repeat center center/ cover; */
}
/* .card__img2{
    background: linear-gradient( to top, rgba(0,0,0,0.5)50%,
    rgba(0,0,0,0.5)50%
    ),url(/img/burgar_testy.jpg) no-repeat center center/ cover;
}
.veggy{
    background: linear-gradient( to top, rgba(0,0,0,0.5)50%,
    rgba(0,0,0,0.5)50%
    ),url(/img/hamburger-veggie.jpg) no-repeat center center/ cover;
}
.chicken_burger{
    background: linear-gradient( to top, rgba(0,0,0,0.5)50%,
    rgba(0,0,0,0.5)50%
    ),url(/img/burgar_spicy_juicy.jpg) no-repeat center center/ cover;
} */


.card__img_wrap img{
    width: 100%;
    height: 100%;
    z-index: -2;
    object-fit: fill;
    border-top-left-radius: 40%;
    border-top-right-radius: 40%;
}

.overley{
    position: absolute;
    top: 0; right: 0; left: 0; bottom: 0;
    background-color: rgba(0, 0, 0, 0.5);
    width: 100%;
    height: 100%;
    border-top-left-radius: 40%;
    border-top-right-radius: 40%;
}


/* card content styling */
.card__content{
    flex: 1;
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    row-gap: 5px;
}

.card__content h3{
    font-family: var(--headers);
    font-size: 1.4rem;
}

.card__content p{
    width: 100%;
    font-size: 1rem;
    font-weight: 600;
    line-height: 1.5;
    color: #444;
    text-align: center;
}

.card_bottom{
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.order__Rating{
    background-color: var(--color_orange_dk);
    border-radius: 15px;
    padding: 0.48rem 1rem;
}




/* ######## repoinsive media query 992px ######*/

@media (max-width: 992px) {
    .section_2{
        padding: 3.125rem;
    }

    .burgar__card{
        width: 400px;
        height: auto;
    }

    .card__img_wrap{
        width: 80%;
        height: 100%;
    }

    .card__content{
        row-gap: 10px;
        height: 100%;
        flex: 1;
    }
    .card__content p{
        font-size: 1.1rem;
    }
}
@media (max-width: 768px) {
    .section_2{
        padding: 3.125rem;
    }

    .top__card,
    .bottom__card{
        flex-direction: column;
        justify-content: center;
        align-items: center;
        row-gap: 4rem;
    }

    /* sections h2 */
    .sect_2__wrap h2,
    .sect__3__wrap h2,
    #sect__4__wrap h2,
    .footer__wrap h2{
        font-size: 2rem;
    }

    .burgar__card{
        width: 25rem; /*400px*/
        height: auto;/*600px*/
    }

    .card__img_wrap{
        width: 80%;
        height: 100%;
    }

}
@media (max-width: 480px) {
    .section_2{
        padding: 3.125rem;
    }

    .top__card,
    .bottom__card{
        flex-direction: column;
        justify-content: center;
        align-items: center;
        row-gap: 4rem;
    }

    /* section h2s */
    .sect_2__wrap h2,
    .sect__3__wrap h2,
    #sect__4__wrap h2,
    .footer__wrap h2{
        font-size: 1.8rem;
        text-align: center;
    }

    .burgar__card{
        width: 20rem;
        height: auto;
    }

    .card__img_wrap{
        width: 80%;
        height: 100%;
    }

    .card__content h3{
        font-size: 1.3rem;
    }
    .card__content p{
        width:  100%;
        height: 100%;
        font-size: 1rem;
    }
    .card_bottom{
        height: 100%;
        align-items: flex-start;
    }
    .order__Rating{
        background-color: var(--color_orange_dk);
        border-radius: 15px;
        padding: 0.38rem 1rem;
    }
}




/* #### section 3 ##### */
#section_3,
#section_4,
#section_5{
    width: 100%;
    height: auto;
    padding:6.25rem; /*98px and 150px*/
}

.sect__3__wrap,
#sect__4__wrap,
#sect__5__wrap{
    /* this wrap everything inside of sec 3 */
 
}

/* 
* this houses the menu list and the image display
*/
.burger__menu{
    flex: 1;
    width: 100%;
    height: 100%;
    display: flex;
}

/*burger menu list  */
.burger__menu__list{
    width: 110%;
    height: 100%;
    display: flex;
    flex-direction: column;
}

.burger__menu__subMenu{
    width: 100%;
    height: auto;
}

.img__call{
    text-decoration: none;
    color: var(--white);
    transition: 1s 0.8s ease;
}

.submenu{
    list-style: none;
    width: 100%;
    height: 100%;
    display: flex;
    column-gap: 5rem;/*80px*/
    padding: 1rem;
}
.submen__list{
    perspective: 800px;
}
.submenu__link{
    text-decoration: none;
    font-size: 1.035rem;
    font-weight: 600;
    color: var(--text-color);
    transition: color 350ms ease-in,
    transform 330ms ease, 
    text-decoration 340ms ease,
    text-shadow 335ms ease
    ;
}
.submenu__link:hover{
    color: var(--color_yellow);
    text-decoration: underline;
    text-decoration-color: var(--color_yellow);
    text-underline-offset: 10px;
    text-shadow: 2px 3px 6px #f1f1f198;
    transform: scale(1.074);
}
.submenu__link:active{
    transform: translateZ(90px);
}


/* this contains the toggle content */
.burger__menu__list__items{
    width: 100%;
    height: 100%;
    padding: 0.7rem 5rem 0.7rem 0px;
}

/* toggle container */
.toggle{
    width: 100%;
    height: auto;
    border-bottom: 1px solid var(--color_orange_dk);
    cursor: pointer;
}

.question{
    display: flex;
    justify-content: space-between;
    padding: 1rem;
    transition: font-size 460ms ease;
}

.toggle.actived .question{
    font-size: 0.855rem;
    color: var(--color_orange_dk);
}
/* ... */

